# procon-blocklist

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md
.github/workflows/: create-release.yml  generate-lists.yml  main.yml  pr-validation.yml  release.yml  update-lists.yml  validate-pr.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
data/: adblock.txt
lists/: .control  adblock.txt  hosts.txt  raw.txt
src/: main.rs
